# tracing_tool

./: .env.example  .gitignore  Makefile  README.md  app.py  app2.py  docker-compose.yml  main.py  pyproject.toml  setup.sh
tmp/: otel-collector-config.yaml
