[project]
name = "tracing-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-asyncio>=0.60b1",
    "opentelemetry-instrumentation-dbapi>=0.60b1",
    "opentelemetry-instrumentation-flask>=0.60b1",
    "opentelemetry-instrumentation-grpc>=0.60b1",
    "opentelemetry-instrumentation-jinja2>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-requests>=0.60b1",
    "opentelemetry-instrumentation-threading>=0.60b1",
    "opentelemetry-instrumentation-urllib>=0.60b1",
    "opentelemetry-instrumentation-urllib3>=0.60b1",
]
